@@ -1146,8 +1146,9 @@ float_frac(
   else
   {
     _hidefirst(f, f->exponent + 1);
-    f->exponent = -_scan_digit(_valueof(f), float_getlength(f), 0);
-    _hidefirst(f, f->exponent--);
+    int leadingzeros = _scan_digit(_valueof(f), float_getlength(f), 0);
+    _hidefirst(f, leadingzeros);
+    f->exponent = -leadingzeros - 1;
 #ifdef FLOATDEBUG
     _setvalue_(f);
 #endif
